# LookingGlass

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CONTRIBUTORS  Containerfile  README.md  VERSION  gl-check  pre-commit  refresh-copyright  version.cmake  wiki-get
arbiter/: CMakeLists.txt
arbiter/src/: main.c
c-host/platform/Windows/: CMakeLists.txt  resource.rc
client/: .gitignore  .vimrc  CMakeLists.txt  DEBUGGING.md  KVMGFXHeader.h  Makefile  README.md  debug.h  delay.c  delay.h  i3start.sh  kb.h  lg-clipboard.h  lg-clipboards.h  lg-decoder.h  lg-decoders.h  lg-font.h  lg-fonts.c  lg-fonts.h  lg-renderer.c  lg-renderer.h  lg-renderers.h  ll.c  ll.h  main  main.c  utils.c  utils.h  xlib-shim.c
client/audiodevs/: CMakeLists.txt
client/audiodevs/PipeWire/: CMakeLists.txt  pipewire.c
client/audiodevs/PulseAudio/: CMakeLists.txt  pulseaudio.c
client/clipboard/: CMakeLists.txt  x11.c
client/clipboards/: CMakeLists.txt
client/clipboards/Wayland/: CMakeLists.txt
client/clipboards/X11/: CMakeLists.txt
client/cmake/: FindGMP.cmake  MakeObject.cmake
client/debian/: .gitignore  changelog  control  rules
client/decoders/: CMakeLists.txt  h264.c  null.c  yuv420.c
client/decoders/src/: null.c  yuv420.c
client/displayservers/: CMakeLists.txt
client/displayservers/SDL/: CMakeLists.txt  kb.h  sdl.c
client/displayservers/Wayland/: .gl.c.kate-swp  CMakeLists.txt  activation.c  clipboard.c  colormgmt.c  cursor.c  gl.c  icon.c  idle.c  input.c  output.c  poll.c  presentation.c  registry.c  scale.h  shell_libdecor.c  shell_xdg.c  state.c  vulkan.c  wayland.c  wayland.h  window.c
client/displayservers/X11/: CMakeLists.txt  atoms.c  atoms.h  clipboard.c  clipboard.h  cursor.c  cursor.h  wm.h  x11.c  x11.h
client/fonts/: CMakeLists.txt  sdl.c
client/fonts/SDL/: CMakeLists.txt
client/fonts/freetype/: CMakeLists.txt
client/include/: app.h  egl_dynprocs.h  eglutil.h  evdev.h  gl_dynprocs.h  lg-clipboards.h  lg-decoders.h  lg-fonts.h  lg-renderers.h  ll.h  overlay_utils.h  util.h  utils.h
client/include/interface/: app.h  audiodev.h  clipboard.h  decoder.h  displayserver.h  font.h  overlay.h  renderer.h
client/ivshmem/: ivshmem.c  ivshmem.h
client/parsers/: nal.c  nal.h
client/renderers/: CMakeLists.txt  basic.c  egl.c  egl_model.c  egl_model.h  egl_shader.c  egl_shader.h  egl_shader_progs.h  egl_texture.c  egl_texture.h  opengl-basic.c  opengl.c
client/renderers/EGL/: CMakeLists.txt  alert.c  alert.h  cursor.c  cursor.h  damage.c  damage.h  debug.c  debug.h  desktop.c  desktop.h  desktop_rects.c  desktop_rects.h  draw.c  draw.h  dynprocs.c  dynprocs.h  effect.c  effect.h  egl.c  egl.h  egldebug.c  egldebug.h  egltypes.h  ffx.c  ffx.h  filter.c  filter.h  filter_24bit.c  filter_bgr_bgra.c  filter_downscale.c  filter_ffx_cas.c  filter_ffx_fsr1.c  filter_glsl.c  filter_hdr.c  filters.h  fps.c  fps.h  framebuffer.c  framebuffer.h  (+25 more)
client/renderers/OpenGL/: CMakeLists.txt  opengl.c
client/renderers/Vulkan/: CMakeLists.txt  cursor.c  cursor.h  desktop.c  desktop.h  extensions.c  extensions.h  imgui.c  imgui.h  vulkan.c  vulkan_util.c  vulkan_util.h
client/renderers/egl/: CMakeLists.txt  alert.c  alert.h  cursor.c  cursor.h  desktop.c  desktop.h  draw.c  draw.h  egl.c  fps.c  fps.h  model.c  model.h  progs.h  shader.c  shader.h  splash.c  splash.h  texture.c  texture.h
client/renderers/opengl/: CMakeLists.txt  opengl.c
client/spice/: CMakeLists.txt  messages.h  rsa.c  rsa.h  spice.c  spice.h
client/spice/include/: rsa.h
client/spice/src/: messages.h  rsa.c  spice.c
client/src/: app.c  app_internal.h  audio.c  audio.h  clipboard.c  clipboard.h  config.c  config.h  core.c  core.h  egl_dynprocs.c  eglutil.c  evdev.c  gl_dynprocs.c  kb.c  kb.h  keybind.c  keybind.h  lg-renderer.c  ll.c  main.c  main.h  message.c  message.h  overlay_utils.c  overlay_utils.cpp  overlays.h  render_queue.c  render_queue.h  util.c  utils.c  wm.c  wm.h
client/src/overlay/: alert.c  config.c  fps.c  graphs.c  help.c  msg.c  msg.h  record.c  splash.c  status.c
common/: CMakeLists.txt  KVMFR.h  KVMGFXHeader.h  debug.h  locking.h  memcpySSE.asm  memcpySSE.h  memcpySSE2.h
common/cmake/: FindBFD.cmake
common/include/common/: KVMFR.h  appstrings.h  array.h  countedbuffer.h  cpuinfo.h  crash.h  debug.h  display.h  dpi.h  event.h  framebuffer.h  ivshmem.h  ll.h  locking.h  objectlist.h  open.h  option.h  paths.h  (+14 more)
common/src/: KVMFR.c  appstrings.c  countedbuffer.c  cpuinfo.c  crash.linux.c  crash.windows.c  debug.c  framebuffer.c  ll.c  memcpySSE.asm  objectlist.c  option.c  rects.c  ringbuffer.c  runningavg.c  stringlist.c  stringutils.c  sysinfo.linux.c  sysinfo.windows.c  vector.c
host/: .gitignore  CMakeLists.txt  CaptureFactory.h  Com.h  CrashHandler.cpp  CrashHandler.h  ICapture.h  IVSHMEM.cpp  IVSHMEM.h  Looking Glass.sln  MTMemcpy.cpp  MTMemcpy.h  Makefile  MultiMemcpy.cpp  MultiMemcpy.h  README.md  Service.cpp  Service.h  TextureConverter.cpp  TextureConverter.h  TraceUtil.cpp  TraceUtil.h  Util.h  WinDebug.h  ivshmem.cpp  ivshmem.h  kvm-ivshmem-host.sln  kvm-ivshmem-host.vcxproj  kvm-ivshmem-host.vcxproj.filters  looking-glass-host.vcxproj  looking-glass-host.vcxproj.filters  main.c  main.cpp  toolchain-mingw64.cmake
host/Capture/: DXGI.cpp  DXGI.h  NvFBC.cpp  NvFBC.h
host/MFT/: H264.cpp  H264.h
host/Shaders/: BGRAtoNV12.h  BGRAtoNV12.hlsl  Pixel.hlsl  RGBtoYUV.hlsl  Vertex.h  Vertex.hlsl
host/cmake/: PreCapture.cmake
host/include/: downsample_parser.h
host/installer/: installer.nsi
host/platform/: CMakeLists.txt
host/src/: app.c  downsample_parser.c
host/sync-test/: main.c  packages.config  sync-test.vcxproj  sync-test.vcxproj.filters
obs/: CMakeLists.txt  lg.c  main.c
obs/effect/: cursor.effect  hdrpq.effect  rgb24.effect
porthole/: CMakeLists.txt
porthole/src/: msg.h  phmsg.h  porthole.c  types.h  util.c
profile/client/: CMakeLists.txt
resources/: CMakeLists.txt  icondata.c  icondata.h  lg-logo.ai  looking-glass-client.desktop.in  looking-glass.desktop
resources/no-input-cursor/: 16.cursor  16.xcur  32.cursor  32.xcur
(+365 files in other folders)
